--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.1.1 #add for the currentPage
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -57,6 +58,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+  - image/ #for the app logo
 
   # To add assets to your application, add an assets section, like this:
   # assets:
