--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   provider: ^6.1.1 #add for the currentPage
   mongo_dart: ^0.10.0 #for using mongoDB
+  http:
 
 
   # The following adds the Cupertino Icons font to your application.
