--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   http: ^0.13.4
   shared_preferences: ^2.0.16
   flutter_secure_storage: ^9.0.0 #for local storage
-
+  google_maps_flutter: ^2.5.3 #for google map
+ 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
