--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:label="flutter_application_1"
         android:name="${applicationName}"
@@ -32,5 +34,6 @@
         <!-- <mete-data 
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyASTdaSJZhhc8OuxLL-M4TE9dViBngnftc"/> -->
+          
     </application>
 </manifest>
