--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   sensors: ^2.0.3
   geolocator: ^10.1.0
   image_picker: ^1.0.7
+  flutter_map: ^4.0.0
+latlong2: ^0.9.0
 
 dev_dependencies:
   flutter_test:
